# nim-research-agent

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  run_pi_agent.js  search_result.txt  test_llama3_report.md  test_pi_report.md
research_agent/: __init__.py  agent.py  cli.py  mcp_server.py  nim_client.py  tools.py
